fix: apply correct bussiness rule validation for update sale
